--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
 </table>
 <hr>
 <h3>About Me:</h3>
-<p>I'm a 19-year-old musician who's just finished my 1st year of studying Computer Science BSc at the University of Birmingham.</p>
+<p>I'm a 19-year-old musician between years 1 and 2 of studying Computer Science BSc at the University of Birmingham.</p>
 <p>I started learning music at about five years old, after watching Queen's performance at Live Aid. I took piano and singing lessons for many years, getting up to Grade 5 in singing and Grade 7 in Piano. Additionally, I've been teaching myself ukulele since the start of the first lockdown.</p>
-<p>I'm currently working on a 'Lesser-Known Covers' project in which, in an attempt to keep musically active despite my university work, I'm doing a cover of a fairly unknown song for each month of 2021.</p>
 
 
 <h4>At the moment:</h4>
-<p> I've just finished my first year of university, so I'm resting briefly. My summer plans include improving this website, recording some original songs, continuing with the Unknown Covers project, working with the <a href="https://www.youtube.com/channel/UCv9J3SQC27qlmZwaUwwvmhw/videos" target="_blank">Bad Music Scene</a> project, and starting up some social media stuff in an effort to gain visibility for my music. I'm also rehearsing a short set of originals and covers, for busking and hopefully some open mic nights... Should be fun.</p>
+<p> I'm currently resting for a bit over the summer. I don't have too much planned for the summer, and I'm not working on any specific musical project. I'm going to try and get involved with the <a href="https://www.youtube.com/channel/UCv9J3SQC27qlmZwaUwwvmhw/videos" target="_blank">Bad Music Scene</a> project as a way to learn some musical skills and mess about with ideas, without any pressure. I'm also starting up some social media stuff in an effort to gain visibility for my music, as well as rehearsing a short set of originals and covers, for busking and hopefully some open mic nights... Should be fun.</p>
 
 <h3>Contact me:</h3>
 <p>If you wish to contact me, you can do so by clicking the below link. Write 'PENGUINATOR' in the subject box, or I won't see it.</p>
@@ -43,13 +42,9 @@
 <p><small>Mouse over the art for titles. Click for more info.</p>
 
 <div id="grid">
-	<a href="LoveAndWar.html" class="img" style="background-image: url(LoveAndWar.png)" title="Love & War - Track Dogs cover"></a>
-	<a href="Placeholder_SSI.html" class="img" style="background-image: url(Broken.png)" title="Broken - Matt Lloyd Mostyn cover"></a>
-      <a href="Placeholder_SSI.html" class="img" style="background-image: url(OhHell.jpg)" title="Oh Hell - Jack Conte cover"></a>
-      <a href="Placeholder_SSI.html" class="img" style="background-image: url(JoyWithoutPleasure.jpg)" title="Joy Without Pleasure - Daniel Johnston cover"></a>
-      <a href="GetAround.html" class="img" style="background-image: url(GetAround.jpg)" title="Get Around - The Outs"></a>
+	<a href="Placeholder_SSI.html" class="img" style="background-image: url(UnknownCovers.png)" title="Unknown Covers (2021 cover EP)"></a>
       <a href="LastWordOn2020.html" class="img" style="background-image: url(LastWordOn2020.jpg)" title="A Last Word on 2020 (What a God-Awful Year) (2020 Single)"></a>
-    <a href="Placeholder_SSI.html" class="img" style="background-image: url(MorningChildhood.png)" title="Morning Childhood (2020 album)"></a>
+    <a href="MorningChildhood/AlbumHome.html" class="img" style="background-image: url(MorningChildhood.png)" title="Morning Childhood (2020 album)"></a>
     <a href="Placeholder_SSI.html" class="img" style="background-image: url(PlasticBeach.png)" title="Plastic Beach: Kazoo Edition (2020 Gorillaz cover album)"></a>
     <a href="FreightTrain.html" class="img" style="background-image: url(FreightTrain.png)" title="Freight Train (2019 Single)"></a>
  </div>
