Added Unknown Covers EP Page, fixed some bugs

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <p><small>Mouse over the art for titles. Click for more info.</p>
 
 <div id="grid">
-	<a href="Placeholder_SSI.html" class="img" style="background-image: url(UnknownCovers.png)" title="Unknown Covers (2021 cover EP)"></a>
+	<a href="UnknownCovers/AlbumHome.html" class="img" style="background-image: url(UnknownCovers.png)" title="Unknown Covers (2021 cover EP)"></a>
       <a href="LastWordOn2020.html" class="img" style="background-image: url(LastWordOn2020.jpg)" title="A Last Word on 2020 (What a God-Awful Year) (2020 Single)"></a>
     <a href="MorningChildhood/AlbumHome.html" class="img" style="background-image: url(MorningChildhood.png)" title="Morning Childhood (2020 album)"></a>
     <a href="Placeholder_SSI.html" class="img" style="background-image: url(PlasticBeach.png)" title="Plastic Beach: Kazoo Edition (2020 Gorillaz cover album)"></a>
