--- a/UnknownCovers/GetAround.html
+++ b/UnknownCovers/GetAround.html
@@ -9,10 +9,10 @@
 <link rel="stylesheet" href="style.css">
 <base target="_parent">
 
-<a href="index.html" style="float:right;"<p>Home</p></a>
+<a href="AlbumHome.html" style="float:right;"<p>Unknown Covers EP</p></a>
 
 <h1>Get Around - The Outs cover</h1>
-<h2>Unknown Song Project - January's song</h2>
+<h2>Unknown Covers EP - January's song</h2>
 <h4><a href="https://youtu.be/pUxBS7EWWxY" target="_blank">Original Song</a></h4>
 
 <table>
@@ -30,9 +30,7 @@ Your browser does not support the audio element.
 <img src="GetAround.jpg" style="float:left;width:350px;height:350px;padding:10px;" alt="Get Around cover art">
 
 <h3>About:</h3>
-<p>Song 1 of 12 in my lesser-known covers project.
-<br><br>
-This song is by a band called The Outs, who have quite a collection of neat tunes, evocative of Oasis, The Beatles, The Who, and others. This song, 'Get Around', is the first one of theirs I heard, after seeing a cover they did of Stop Crying Your Heart Out.</p>
+<p>This song is by a band called The Outs, who have quite a collection of neat tunes, evocative of Oasis, The Beatles, The Who, and others. This song, 'Get Around', is the first one of theirs I heard, after seeing a cover they did of Stop Crying Your Heart Out.</p>
 <h4>Recording:</h4>
 <p>For the style of the song, I decided to start in the same genre as the original, and then progressively weird-ify it with a collection of my favourite aspects of some other songs. Percussive influences come from Talking Heads (particularly David Byrne's performance of Slippery People in American Utopia on Broadway) and Oingo Boingo (the Forbidden Zone theme), the synth from The Who (Who Are You), and the weird vocals/chords later in the song are inspired by various Jacob Collier and Bill Wurtz songs. I won't pretend that I even got close to that level of complexity and musical ingenuity, but I was trying to channel that energy as I sang.</p>
 <h4>Cover Art:</h4>
