--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 </table>
 <hr>
 <h3>About Me:</h3>
-<p>I'm a 19-year-old musician between years 1 and 2 of studying Computer Science BSc at the University of Birmingham.</p>
+<p>I'm a 20-year-old musician in my second year of studying Computer Science BSc at the University of Birmingham.</p>
 <p>I started learning music at about five years old, after watching Queen's performance at Live Aid. I took piano and singing lessons for many years, getting up to Grade 5 in singing and Grade 7 in Piano. Additionally, I've been teaching myself ukulele since the start of the first lockdown.</p>
 
 
 <h4>At the moment:</h4>
-<p> I'm currently resting for a bit over the summer. I don't have too much planned for the summer, and I'm not working on any specific musical project. I'm going to try and get involved with the <a href="https://www.youtube.com/channel/UCv9J3SQC27qlmZwaUwwvmhw/videos" target="_blank">Bad Music Scene</a> project as a way to learn some musical skills and mess about with ideas, without any pressure. I'm also starting up some social media stuff in an effort to gain visibility for my music, as well as rehearsing a short set of originals and covers, for busking and hopefully some open mic nights... Should be fun.</p>
+<p> I'm practicing a busking set- I should be popping up near the Bullring in Birmingham City once I've got my PA system working. I'm also scouting out the area for open mic nights to go to, which should be fun.<br><br>Aside from that, I'm attempting to get control of my sleep schedule, and thinking about messing around with recording covers again, after a several month break from doing anything like that. I'm also planning on updating this website to include stuff I've done outside of music.</p>
 
 <h3>Contact me:</h3>
 <p>If you wish to contact me, you can do so by clicking the below link. Write 'PENGUINATOR' in the subject box, or I won't see it.</p>
@@ -49,6 +49,8 @@
     <a href="FreightTrain.html" class="img" style="background-image: url(FreightTrain.png)" title="Freight Train (2019 Single)"></a>
  </div>
 
+<hr>
+<img src="siteMap.png">
 <hr>
 
 <p>This website is under construction, and I'm using it as a way to learn HTML. It will probably look better soon.</p>
