--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 <h4>At the moment:</h4>
-<p> I'm practicing a busking set- I should be popping up near the Bullring in Birmingham City once I've got my PA system working. I'm also scouting out the area for open mic nights to go to, which should be fun.<br><br>Aside from that, I'm attempting to get control of my sleep schedule, and thinking about messing around with recording covers again, after a several month break from doing anything like that. I'm also planning on updating this website to include stuff I've done outside of music.</p>
+<p>I'm resting in a liminal emotional state, trying to keep up with my CS coursework and playing occasional open mics.</p>
 
 <h3>Contact me:</h3>
 <p>If you wish to contact me, you can do so by clicking the below link. Write 'PENGUINATOR' in the subject box, or I won't see it.</p>
