Placeholder while working
Added Mutual Frogs information

--- a/index.html
+++ b/index.html
@@ -1,59 +1,45 @@
 <!doctype html>
 <html lang="en-GB">
 <head>
-<title>Oliver Hagen's Website</title>
+<title>Oliver Hagen</title>
 </head>
 <body>
-
-<!-- Only very basic styling at the minute. -->
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<link rel="stylesheet" href="style.css">
-<base target="_parent">
-
-<h1><img src="https://yt3.ggpht.com/a-/AOh14GiPUToUh06T6jzaxJ1V0R-1YyLfLK-2vuPWnTxUjQ=s288-c-k-c0xffffffff-no-rj-mo" style="float:right;width:100px;height:100px;" alt="Penguinator Logo">Oliver Hagen's Website</h1>
-<!-- This logo should update with the YouTube one. -->
-
-<table>
-  <tr>
-    <td><h3>Quick Links:</h3></td>
-    <td><p><a href="https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber" target="_blank" title="I'm mainly here.">YouTube</a></p></td>
-    <td><p><a href="https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA" target="_blank">Spotify</a></p></td>
-    <td><p><a href="https://soundcloud.com/penguinator-626121505" target="_blank">SoundCloud</a></p></td>
-   <!-- <td><p><a href="ATA.html" target="_blank">The Bad Music Scene: All The Audio Project</a></p></td>-->
-  </tr>
-</table>
-<hr>
-<h3>About Me:</h3>
-<p>I'm a 20-year-old musician in my second year of studying Computer Science BSc at the University of Birmingham.</p>
-<p>I started learning music at about five years old, after watching Queen's performance at Live Aid. I took piano and singing lessons for many years, getting up to Grade 5 in singing and Grade 7 in Piano. Additionally, I've been teaching myself ukulele since the start of the first lockdown.</p>
-
-
-<h4>At the moment:</h4>
-<p>I'm resting in a liminal emotional state, trying to keep up with my CS coursework and playing occasional open mics.</p>
-
-<h3>Contact me:</h3>
-<p>If you wish to contact me, you can do so by clicking the below link. Write 'PENGUINATOR' in the subject box, or I won't see it.</p>
-<p><a href="mailto:ophagen@icloud.com">Send email</a></p>
-
-<hr>
-<h2>Latest Releases:</h2>
-<p><small>Mouse over the art for titles. Click for more info.</p>
-
-<div id="grid">
-	<a href="UnknownCovers/AlbumHome.html" class="img" style="background-image: url(UnknownCovers.png)" title="Unknown Covers (2021 cover EP)"></a>
-      <a href="LastWordOn2020.html" class="img" style="background-image: url(LastWordOn2020.jpg)" title="A Last Word on 2020 (What a God-Awful Year) (2020 Single)"></a>
-    <a href="MorningChildhood/AlbumHome.html" class="img" style="background-image: url(MorningChildhood.png)" title="Morning Childhood (2020 album)"></a>
-    <a href="Placeholder_SSI.html" class="img" style="background-image: url(PlasticBeach.png)" title="Plastic Beach: Kazoo Edition (2020 Gorillaz cover album)"></a>
-    <a href="FreightTrain.html" class="img" style="background-image: url(FreightTrain.png)" title="Freight Train (2019 Single)"></a>
- </div>
-
-<hr>
-<img src="siteMap.png">
-<hr>
-
-<p>This website is under construction, and I'm using it as a way to learn HTML. It will probably look better soon.</p>
-
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<link rel="stylesheet" href="style.css">
+	<base target="_parent">
+	
+	<h1>Oliver Hagen's website</h1>
+	<p>Currently being re-written, with an emphasis on not looking like a '90s relic</p>
+	<table>
+	  <tr>
+	    <td><h3>Quick Links:</h3></td>
+	    <td><p><a href="https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber" target="_blank" title="I'm mainly here.">YouTube</a></p></td>
+	    <td><p><a href="https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA" target="_blank">Spotify</a></p></td>
+	    <td><p><a href="https://soundcloud.com/penguinator-626121505" target="_blank">SoundCloud</a></p></td>
+		<td><p><a href="https://www.instagram.com/penguinatron/" target="_blank">Instagram</a></p></td>
+	   <!-- <td><p><a href="ATA.html" target="_blank">The Bad Music Scene: All The Audio Project</a></p></td>-->
+	  </tr>
+	</table>
+	<h2>Check Out:</h2>
+	<a href="https://linktr.ee/MutualFrogs"><img src="MelancholyChristmas.jpg" alt="Melancholy Christmas album art" height=300 title="Melancholy Christmas (Mutual Frogs 2021 single)"></img></a>
+	<p>(click the art to hear the song)</p>
+	<p>I've been working with the band Mutual Frogs to produce their debut single, Melancholy Christmas. It's been a lot of fun, and a great learning experience. The band are both talented and nice- a great first experience producing someone else's work.</p>
+	<p>I saw the Mutual Frogs for the first time in early November of 2021, at an open mic hosted by local Extinction Rebellion members as a sort of rally for a march that was happening that weekend, to try and push global leaders to actually do something at COP26. As soon as I saw the band play, I wanted to be involved in recording their music- their songs were great, as was their playing. I chatted with Jess about it after their performance, and she told me that the band were thinking about recording their material at some point, so it might happen. We discussed it in passing during other conversations we had while getting UoB's Live and Unsigned Music Society going (we were both on the interim comittee), and it seemed like the band wanted something out before the end of the year. Then...</p>
+	<p>My involvement in the process was about two weeks, from the 27th of November - when Jess messaged me regarding recording the song -  to the 13th of December, when I sent the final mix to the band. After enthusiastically accepting the invitation to produce a song for the group, I was sent a demo recording and a chord/lyric document. I started hashing out an arrangement, and presented it to the band some days later at one of their rehearsals. We exchanged ideas, and the band practiced and modified some of the harmonies I'd arranged until everyone was happy with it. We organised a time to record, and I got on my way home while they carried on jamming out tunes.</p>
+	<p>On the 9th, I recorded a bunch of my own stuff during the day, and then moved all of my musical stuff into the living room, creating a sort of studio space which I called 'Pershore Studios', and gave a little sign. The band arrived at 17:30, and after listening to some moodboard tunes and talking through ideas, we started by recording a guide track. Then we added the proper rhythm guitar, the bass, and some vocals from Emily and Meia. This part was a little difficult, because everyone kept on making each other laugh while we were recording. We got through despite this hardship, getting an average of three takes per part for me to sift through. We then recorded lead guitar and some more vocals, before calling it an evening.</p>
+	<p>I started mixing the instruments that evening and the next day, reviewing my progress with Jess and Nick when they came over. There were some technical difficulties in adding their pedalboard and amp effects, but we got acceptable results (and some very fun metal machine music) in the end. Nick added some backing vocals, as did Jess the following day. On that third and final day of recording, Meia also came over to hear the nearly finished mix. Once I got the songwriter's stamp of approval, I disassembled Pershore Studios, and got on with the mixing proper.</p>
+	<p>Some fun things went in then- the rhythm guitar was doubled with alternate takes to create a second track, which added to the sound nicely. The main rhythm guitar take was recorded onto a tape dictation machine I picked up in Brighton during the summer, and the resulting poor quality audio was added back in as an additional track. This, when treated in-DAW, added a nice warm lo-fi element to the sound. Additional ambience was provided by audio lifted from a home video of my parents and their friends laughing and chatting while playing Articulate. This too was EQ'd, reverbed and panned to created muffled speech, as if you were resting in the lounge while listening to the others chatting in the dining room- very cosy. The lead guitar part was assembled by me out of four different takes, each of which contained neat noodling. I tried to pick out the best complete phrases from each, but other melodies composed of multiple interpolated takes seemed to jump out, some more interesting than anything played in one go. Jess was cool with this, and mostly liked how they came out - some bits were changed or reverted according to what she thought worked. All of this was done over the weekend.</p>
+	<p>I sent versions of the mix to my family because my ears were tired, and according to feeback from them and the band, made some further light changes. After a day of back and forth with various parties, we arrived at a final mix that everyone was happy with. Job well done- enjoyable the whole way through, a great experience learning to collaborate with other musicians, and hopefully an opened door to more similar projects in the future.</p>
+	<img src="frog pics.png" alt="Melancholy Christmas album art" title="Melancholy Christmas (Mutual Frogs 2021 single)"></img>
+	<p>These aren't in chronological order- that would be too easy.</p>
+	<ol>
+		<li>Recording the guide track- just vocals and rhythm guitar by songwriter Meia. The mic used was my Shure SV100- Nick the bassist later brought over his SM58 and pop filter, which much improved the quality of the final vocals.</li>
+		<li>This was my payment for mixing, brought over by Jess the guitarist the day after the main recording session. Once we'd made a dent in the first pack, we went through guitars and bass, and added some vocal lines.</li>
+		<li>This was how the room was set up. I stayed behind the mixing desk (in name only, really), and the band sat on the sofas just peeking into the right of the picture. Much interesting conversation and laughter occured. My housemates were very considerate in keeping the area vacant and quiet- cheers to them.</li>
+		<li>I brought all of my instruments down in case the band wanted to use any of them. I thought I had a big-ish pile of stuff, but it was immediately dwarfed by the amps and pedalboards Jess and Nick brought along with them.</li>
+		<li>This was my initial snack offering to the band when they arrived for the main recording session. Well recieved, I think.</li>
+	</ol>
 </body>
 </html>
