Added Plastic Beach info

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		  <td><img src="Music/PlasticBeach.png" alt="Plastic Beach Kazoo Edition album cover" style="width:50px;height:50px;"></td>
 	    <td>2020-03-03</td>
 		<td><a href="Music/MusicHome.html">Music</a></td>
-		<td><a href="https://www.youtube.com/playlist?list=PL776zvniD1BiHIC0pKu3TFrgJvGnuiKv5">Plastic Beach - Kazoo Edition</a></td>
+		<td><a href="Music/PlasticBeach.html">Plastic Beach - Kazoo Edition</a></td>
 	  </tr>
 	</table>
 
