--- a/Music/MusicHome.html
+++ b/Music/MusicHome.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;">Oliver Hagen</h1>
+	<h1 style="text-align:center;"><a href="../index.html">Oliver Hagen</a></h1>
 	
 	
 	<table style="width:100%">
@@ -34,7 +34,7 @@
 	<a href="https://youtu.be/Ypy0knamjyc" class="img" style="background-image: url(MelancholyChristmas.jpg)" title="Melancholy Christmas - Mutual Frogs: The first song I produced for other musicians."></a>
 	<a href="https://youtube.com/playlist?list=PL776zvniD1BhbpTCZIFJqtB4xzULHGqwq" class="img" style="background-image: url(ObscureCoversVol1.png)" title="Obscure Covers Volume 1: Relatively unknown songs covered in different styles, as an exercise in expanding my stylistic range."></a>
 <a href="https://youtube.com/playlist?list=PL776zvniD1BgcfWSzQMULW9BSMiQO71t7" class="img" style="background-image: url(MorningChildhood.png)" title="Morning Childhood: My first original album."></a>
-    <a href="https://www.youtube.com/playlist?list=PL776zvniD1BiHIC0pKu3TFrgJvGnuiKv5" class="img" style="background-image: url(PlasticBeach.png)" title="Plastic Beach - Kazoo Edition: A faithful recreation of most of the amazing Gorillaz album, done using only the sounds of the kazoo."></a>
+    <a href="PlasticBeach.html" class="img" style="background-image: url(PlasticBeach.png)" title="Plastic Beach - Kazoo Edition: A faithful recreation of most of the amazing Gorillaz album, done using only the sounds of the kazoo."></a>
  </div>
 
 </body>
