Added Commonwealth app song page

--- a/Placeholder.html
+++ b/Placeholder.html
@@ -11,7 +11,7 @@
 
 <h1>Area under construction</h1>
 <h2>Planned page, not quite done yet...</h2>
-<p>This site is updated frequently, so check back soon for actual content here.</p>
+<p>I'll get to it eventually. I would say check back soon, but I've not got the organisational skills or work ethic to be making that kind of promise.</p>
 
 <img src="WIPenguin.png" style="width:200px;" alt="Penguinator Logo">
 
