--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
  </div>
 -->
  
+<a href="CommonwealthApp.html" class="img" style="background-image: url(CommonwealthApp.png)" title="Commonwealth App song, submitted as coursework for my degree"></a>
+ 
 <h3 style="text-align:center;">Stuff I've done<!-- (chronologically)--></h3>
 
 	<table>
@@ -54,11 +56,17 @@
 		<th>Category</th>
 		<th>Title</th>
 	  </tr>
-	  <tr>
 		  <td><img src="Music/MelancholyChristmas.jpg" alt="Melancholy Christmas Single cover" style="width:50px;height:50px;"></td>
 	    <td>2021-12-18</td>
 		<td><a href="Music/MusicHome.html">Music</a></td>
 		<td><a href="https://youtu.be/Ypy0knamjyc">Melancholy Christmas - Mutual Frogs</a></td>
+	  </tr>
+	  <tr>
+	  <tr>
+		  <td><img src="Music/CommonwealthApp.png" alt="Commonwealth App song thumbnail" style="width:50px;height:50px;"></td>
+	    <td>2021-12-10</td>
+		<td><a href="Music/MusicHome.html">Music</a></td>
+		<td><a href="Music/CommonwealthApp.html">Commonwealth App Song</a></td>
 	  </tr>
 	  <tr>
 		  <td><img src="Music/ObscureCoversVol1.png" alt="Obscure Covers (Vol. 1) EP cover" style="width:50px;height:50px;"></td>
@@ -70,7 +78,7 @@
 		  <td><img src="Music/MorningChildhood.png" alt="Morning Childhood album cover" style="width:50px;height:50px;"></td>
 	    <td>2020-09-01</td>
 		<td><a href="Music/MusicHome.html">Music</a></td>
-		<td><a href="https://youtube.com/playlist?list=PL776zvniD1BgcfWSzQMULW9BSMiQO71t7">Morning Childhood</a></td>
+		<td><a href="Music/MorningChildhood.html">Morning Childhood</a></td>
 	  </tr>
 	  <tr>
 		  <td><img src="Music/PlasticBeach.png" alt="Plastic Beach Kazoo Edition album cover" style="width:50px;height:50px;"></td>
