Fixed broken link

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		  <td><img src="Music/MorningChildhood.png" alt="Morning Childhood album cover" style="width:50px;height:50px;"></td>
 	    <td>2020-09-01</td>
 		<td><a href="Music/MusicHome.html">Music</a></td>
-		<td><a href="Music/MorningChildhood.html">Morning Childhood</a></td>
+		<td><a href="Placeholder.html">Morning Childhood</a></td>
 	  </tr>
 	  <tr>
 		  <td><img src="Music/PlasticBeach.png" alt="Plastic Beach Kazoo Edition album cover" style="width:50px;height:50px;"></td>
