--- a/Music/MelancholyChristmas.html
+++ b/Music/MelancholyChristmas.html
@@ -36,7 +36,7 @@
 
 <h4 style="text-align:center;">Background and arrangement</h4>
 
-<p style="text-align:center;">I saw the Mutual Frogs for the first time in early November of 2021, at an open mic hosted by local Extinction Rebellion members as a sort of rally for a march that was happening that weekend, to try and push global leaders to actually do something at COP26. As soon as I saw the band play, I wanted to be involved in recording their music- their songs were great, as was their playing. I chatted with Jess about it after their performance, and she told me that the band were thinking about recording their material at some point, so it might happen. We discussed it in passing during other conversations we had while getting UoB's Live and Unsigned Music Society going (we were both on the interim comittee), and it seemed like the band wanted something out before the end of the year. Then...</p>
+<p style="text-align:center;">I saw the Mutual Frogs for the first time in early November of 2021, at an open mic hosted by the university's Climate Justice Movement society as a sort of rally for a march that was happening that weekend, to try and push global leaders to actually do something at COP26. As soon as I saw the band play, I wanted to be involved in recording their music- their songs were great, as was their playing. I chatted with Jess about it after their performance, and she told me that the band were thinking about recording their material at some point, so it might happen. We discussed it in passing during other conversations we had while getting UoB's Live and Unsigned Music Society going (we were both on the interim comittee), and it seemed like the band wanted something out before the end of the year.</p>
 
 <img src="MelancholyChristmas/COPcabaret.png" alt="A dodgy photo collage of the Frogs and myself at the COP 26 Cabaret, put on by the UoB Climate Justice Movement."></img>
 
@@ -52,9 +52,25 @@ Your browser does not support the audio element.
 <p style="text-align:center;">On the 9th, <a href="CommonwealthApp.html">I recorded a bunch of my own stuff during the day</a>, and then moved all of my musical stuff into the living room, creating a sort of studio space which I called 'Pershore Studios', and gave a little sign. The band arrived at 17:30, and after listening to some moodboard tunes and talking through ideas, we started by recording a guide track. Then we added the proper rhythm guitar, the bass, and some vocals from Emily and Meia. This part was a little difficult, because everyone kept on making each other laugh while we were recording. We got through despite this hardship, getting an average of three takes per part for me to sift through. We then recorded lead guitar and some more vocals, before calling it an evening.
 	<br><br>
 I started mixing the instruments that evening and the next day, reviewing my progress with Jess and Nick when they came over. There were some technical difficulties in adding their pedalboard and amp effects, but we got acceptable results (and some very fun metal machine music) in the end. Nick added some backing vocals, as did Jess the following day. On that third and final day of recording, Meia also came over to hear the nearly finished mix. Once I got the songwriter's stamp of approval, I disassembled Pershore Studios, and got on with the mixing proper.
-	<br><br>
+</p>
+
+<div style="text-align: center;"><video width=25% height=auto controls>
+  <source src="MelancholyChristmas/feedback.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video></div>
+
+<!--<div style="text-align: center;"><audio controls>
+  <source src="MelancholyChristmas/ChristmasFeedback.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio></div>-->
+
+<p style="text-align:center;">
 Some fun things went in then- the rhythm guitar was doubled with alternate takes to create a second track, which added to the sound nicely. The main rhythm guitar take was recorded onto a tape dictation machine I picked up in Brighton during the summer, and the resulting poor quality audio was added back in as an additional track. This, when treated in-DAW, added a nice warm lo-fi element to the sound. Additional ambience was provided by audio lifted from a home video of my parents and their friends laughing and chatting while playing Articulate. This too was EQ'd, reverbed and panned to created muffled speech, as if you were resting in the lounge while listening to the others chatting in the dining room- very cosy. The lead guitar part was assembled by me out of four different takes, each of which contained neat noodling. I tried to pick out the best complete phrases from each, but other melodies composed of multiple interpolated takes seemed to jump out, some more interesting than anything played in one go. Jess was cool with this, and mostly liked how they came out - some bits were changed or reverted according to what she thought worked. All of this was done over the weekend.
-	<br><br>
+</p>
+
+<img src="MelancholyChristmas/leadGuiat.png" alt="The comped lead guitar for Melancholy Christmas."></img>
+
+<p style="text-align:center;">
 I sent versions of the mix to my family because my ears were tired, and according to feeback from them and the band, made some further light changes. After a day of back and forth with various parties, we arrived at a final mix that everyone was happy with. Job well done- enjoyable the whole way through, a great experience learning to collaborate with other musicians, and hopefully an opened door to more similar projects in the future.</p>
 
 	<img src="MelancholyChristmas/frogPics.png" alt="various pictures from the recording process"></img>
@@ -67,6 +83,11 @@ I sent versions of the mix to my family because my ears were tired, and accordin
 		<li>This was my initial snack offering to the band when they arrived for the main recording session. Well recieved, I think.</li>
 	</ol>
 
+<div style="text-align: center;"><video width=50% height=auto controls>
+  <source src="MelancholyChristmas/tapeTeaser.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video></div>
+
 <h4 style="text-align:center;">Retrospective Opinion</h4>
 <p style="text-align:center;">I think this holds up ok. I'm pleased with the vocal harmonies, especially the way they settle on the ears in the outro. Combined with the muffled conversation, I think we achieved the relaxed atmosphere we were going for. The lead guitar is my favourite part of the song, because it sounds really natural despite the amount of comping used, and ends up complementing the vocal melody nicely. I'm less thrilled with the bass (too heavy and muddy when it comes in), tape-effect rhythm guitar (possibly too loud), and overall volume (too quiet, a recurring problem of mine), but none of these significantly overshadow or diminish the good quality of the performances or songwriting. All in all, not too bad- and a good first try.</p>
 
@@ -76,6 +97,8 @@ I sent versions of the mix to my family because my ears were tired, and accordin
 Here's their linktree:
 <a href="https://linktr.ee/MutualFrogs">https://linktr.ee/MutualFrogs</a></p>
 
+<hr>
+Last updated 2022-05-17
 </body>
 </html>
 
