--- a/Music/MusicHome.html
+++ b/Music/MusicHome.html
@@ -36,6 +36,8 @@
     <a href="PlasticBeach.html" class="img" style="background-image: url(PlasticBeach.png)" title="Plastic Beach - Kazoo Edition: A faithful recreation of most of the amazing Gorillaz album, done using only the sounds of the kazoo."></a>
  </div>
 
+<hr>
+Last updated 2022-05-17
 </body>
 </html>
 
