--- a/Music/PlasticBeach.html
+++ b/Music/PlasticBeach.html
@@ -86,6 +86,8 @@ Your browser does not support the video tag.
 <h4 style="text-align:center;">Where to find</h4>
 <p style="text-align:center;">Plastic Beach - Kazoo Edition is available on YouTube and SoundCloud. It may end up on streaming services at some point, but I need to find out how uploading weird covers works first.</p>
 
+<hr>
+Last updated 2022-03-26
 </body>
 </html>
 
