Updated home page with description of current situation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	</div>
 	
 <h3>About Me:</h3>
-<p>I'm a 20-year-old musician in my second year of studying Computer Science BSc at the University of Birmingham.</p>
+<p>I'm a 20-year-old musician who's just completed my second year of studying Computer Science BSc at the University of Birmingham.</p>
 <p>It's nowhere near done yet, but this website aims to collect together various projects I've done over the years, including:</p>
 <ul>
 	<li>Two kazoo-only cover albums</li>
@@ -89,7 +89,7 @@
 	</table>
 
 <hr>
-Last updated 2022-05-17
+Last updated 2022-06-02
 </body>
 </html>
 
