--- a/Music/PlasticBeach.html
+++ b/Music/PlasticBeach.html
@@ -16,7 +16,8 @@
 	<div class="flex-container">
 	  <div><th><button class="button button" title="I'm mainly here" type="button" onclick="window.location.href='https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber';">YouTube</button></th></div>
 	  <div><th><button class="button button" title="Where my original music lives" type="button" onclick="window.location.href='https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA';">Spotify</button></th></div>
-	  <div><th><button class="button button" title="Stuff I can't or haven't uploaded to Spotify" type="button" onclick="window.location.href='https://soundcloud.com/penguinator-626121505';">SoundCloud</button></th></div>
+	  <div><th><button class="button button" title="Still learning this" type="button" onclick="window.location.href='https://oliverhagen.bandcamp.com/releases';">Bandcamp</button></th></div>
+	  <div><th><button class="button button" title="Stuff I can't or haven't uploaded to Spotify or Bandcamp" type="button" onclick="window.location.href='https://soundcloud.com/penguinator-626121505';">SoundCloud</button></th></div>
 	  <div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='https://www.instagram.com/penguinatron/';">Instagram</button></th></div>
 	  <!--<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='ATA.html';">The Bad Music Scene: All The Audio Project</button></th></div>-->
 	</div>
@@ -87,7 +88,7 @@ Your browser does not support the video tag.
 <p style="text-align:center;">Plastic Beach - Kazoo Edition is available on YouTube and SoundCloud. It may end up on streaming services at some point, but I need to find out how uploading weird covers works first.</p>
 
 <hr>
-Last updated 2022-03-26
+Last updated 2022-06-06
 </body>
 </html>
 
