Added Solar Trader and Morning Childhood writeups

--- a/Music/CommonwealthApp.html
+++ b/Music/CommonwealthApp.html
@@ -94,10 +94,10 @@ The actual recording process was pretty simple. I did the whole song in sections
 I may have to pinch some of these chords for a 'serious' song at some point. The bridge is too good.</p>
 
 <h4 style="text-align:center;">Where to find</h4>
-<p style="text-align:center;">YouTube only for now.</p>
+<p style="text-align:center;">The video's available on YouTube, and the song can be downloaded from Bandcamp.</p>
 
 <hr>
-Last updated 2022-06-06
+Last updated 2022-10-18
 </body>
 </html>
 
