--- a/Music/MusicHome.html
+++ b/Music/MusicHome.html
@@ -33,7 +33,7 @@
 	<a href="CommonwealthApp.html" class="img" style="background-image: url(CommonwealthApp.png)" title="Commonwealth App song, submitted as coursework for my degree"></a>
 	<a href="MelancholyChristmas.html" class="img" style="background-image: url(MelancholyChristmas.jpg)" title="Melancholy Christmas - Mutual Frogs: The first song I produced for other musicians."></a>
 	<a href="https://youtube.com/playlist?list=PL776zvniD1BhbpTCZIFJqtB4xzULHGqwq" class="img" style="background-image: url(ObscureCoversVol1.png)" title="Obscure Covers Volume 1: Relatively unknown songs covered in different styles, as an exercise in expanding my stylistic range."></a>
-<a href="../Placeholder.html" class="img" style="background-image: url(MorningChildhood.png)" title="Morning Childhood: My first original album."></a>
+<a href="MorningChildhood.html" class="img" style="background-image: url(MorningChildhood.png)" title="Morning Childhood: My first original album."></a>
     <a href="PlasticBeach.html" class="img" style="background-image: url(PlasticBeach.png)" title="Plastic Beach - Kazoo Edition: A faithful recreation of most of the amazing Gorillaz album, done using only the sounds of the kazoo."></a>
  </div>
 
