--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 	</div>
 	
 <h3>About Me:</h3>
-<p>I'm a 20-year-old musician who's just completed my second year of studying Computer Science BSc at the University of Birmingham.</p>
+<p>I'm a 21-year-old musician and hobbyist maker of various things. Currently based in Reading, UK.</p>
 <p>It's nowhere near done yet, but this website aims to collect together various projects I've done over the years, including:</p>
 <ul>
-	<li>Two kazoo-only cover albums</li>
+	<li>The original score to a 5-star play</li>
+	<li>Several kazoo-only cover albums</li>
 	<li>An A*- earning EPQ</li>
 	<li>An original album of songs recorded over lockdown</li>
 	<li>Miscellaneous coding projects</li>
@@ -57,12 +58,24 @@
 		<th>Category</th>
 		<th>Title</th>
 	  </tr>
+	  <tr>
+		  <td><img src="Making/SolarTrader.png" alt="Solar Trader logo" style="width:50px;height:50px;"></td>
+	    <td>2022-12-27</td>
+		<td><a href="Making/MakingHome.html">Making</a></td>
+		<td><a href="Making/SolarTrader.html">Solar Trader - bootlegging a board game</a></td>
+	  </tr>
+	  <tr>
+		  <td><img src="Making/wordleSolver.png" alt="Wordle Solver in action" style="width:50px;height:50px;"></td>
+	    <td>2020-03-03</td>
+		<td><a href="Making/MakingHome.html">Making</a></td>
+		<td><a href="placeholder.html">Wordle Solver using basic set theory, rather than AI</a></td>
+	  </tr>
+	  <tr>
 		  <td><img src="Music/MelancholyChristmas.jpg" alt="Melancholy Christmas Single cover" style="width:50px;height:50px;"></td>
 	    <td>2021-12-18</td>
 		<td><a href="Music/MusicHome.html">Music</a></td>
 		<td><a href="Music/MelancholyChristmas.html">Melancholy Christmas - Mutual Frogs</a></td>
 	  </tr>
-	  <tr>
 	  <tr>
 		  <td><img src="Music/CommonwealthApp.png" alt="Commonwealth App song thumbnail" style="width:50px;height:50px;"></td>
 	    <td>2021-12-10</td>
@@ -79,7 +92,7 @@
 		  <td><img src="Music/MorningChildhood.png" alt="Morning Childhood album cover" style="width:50px;height:50px;"></td>
 	    <td>2020-09-01</td>
 		<td><a href="Music/MusicHome.html">Music</a></td>
-		<td><a href="Placeholder.html">Morning Childhood</a></td>
+		<td><a href="Music/MorningChildhood.html">Morning Childhood [Original Album]</a></td>
 	  </tr>
 	  <tr>
 		  <td><img src="Music/PlasticBeach.png" alt="Plastic Beach Kazoo Edition album cover" style="width:50px;height:50px;"></td>
@@ -90,7 +103,7 @@
 	</table>
 
 <hr>
-Last updated 2022-06-06
+Last updated 2022-12-28
 </body>
 </html>
 
