--- a/Making/MakingHome.html
+++ b/Making/MakingHome.html
@@ -31,7 +31,7 @@
 
 <div id="grid">
 	<a href="SolarTrader.html" class="img" style="background-image: url(SolarTrader.png)" title="Solar Trader - bootlegging an out-of-print board game from the '90s"></a>
-	<a href="../placeholder.html" class="img" style="background-image: url(wordleSolver.png)" title="Wordle Solver - not a clever one, but it *does* work"></a>
+	<a href="wordleSolver.html" class="img" style="background-image: url(wordleSolver.png)" title="Wordle Solver - not a clever one, but it *does* work"></a>
  </div>
 
 <hr>
