--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		  <td><img src="Making/wordleSolver.png" alt="Wordle Solver in action" style="width:50px;height:50px;"></td>
 	    <td>2020-03-03</td>
 		<td><a href="Making/MakingHome.html">Making</a></td>
-		<td><a href="placeholder.html">Wordle Solver using basic set theory, rather than AI</a></td>
+		<td><a href="Making/wordleSolver.html">Wordle Solver using basic set theory, rather than AI</a></td>
 	  </tr>
 	  <tr>
 		  <td><img src="Music/MelancholyChristmas.jpg" alt="Melancholy Christmas Single cover" style="width:50px;height:50px;"></td>
