--- a/Making/MakingHome.html
+++ b/Making/MakingHome.html
@@ -32,6 +32,7 @@
 <div id="grid">
 	<a href="SolarTrader.html" class="img" style="background-image: url(SolarTrader.png)" title="Solar Trader - bootlegging an out-of-print board game from the '90s"></a>
 	<a href="wordleSolver.html" class="img" style="background-image: url(wordleSolver.png)" title="Wordle Solver - not a clever one, but it *does* work"></a>
+	<a href="timelapseCam.html" class="img" style="background-image: url(timelapseCam.jpg)" title="Timelapse Cam - using Python and a webcam to take timelapses wherever I can take a Raspberry Pi"></a>
  </div>
 
 <hr>
