--- a/index.html
+++ b/index.html
@@ -65,8 +65,14 @@
 		<td><a href="Making/SolarTrader.html">Solar Trader - bootlegging a board game</a></td>
 	  </tr>
 	  <tr>
+		  <td><img src="Music/Splinters.jpg" alt="Splinters soundtrack album art" style="width:50px;height:50px;"></td>
+	    <td>2022-08-21</td>
+		<td><a href="Music/MusicHome.html">Music</a></td>
+		<td><a href="placeholder.html">Splinters Original Score - for the Dolphin Youth Theatre Company</a></td>
+	  </tr>
+	  <tr>
 		  <td><img src="Making/wordleSolver.png" alt="Wordle Solver in action" style="width:50px;height:50px;"></td>
-	    <td>2020-03-03</td>
+	    <td>2022-03-03</td>
 		<td><a href="Making/MakingHome.html">Making</a></td>
 		<td><a href="Making/wordleSolver.html">Wordle Solver using basic set theory, rather than AI</a></td>
 	  </tr>
@@ -93,6 +99,12 @@
 	    <td>2020-09-01</td>
 		<td><a href="Music/MusicHome.html">Music</a></td>
 		<td><a href="Music/MorningChildhood.html">Morning Childhood [Original Album]</a></td>
+	  </tr>
+	  <tr>
+		  <td><img src="Making/timelapseCam.jpg" alt="timelapseCam" style="width:50px;height:50px;"></td>
+	    <td>2020-07-18</td>
+		<td><a href="Making/MakingHome.html">Making</a></td>
+		<td><a href="Making/timelapseCam.html">Python Timelapse Camera</a></td>
 	  </tr>
 	  <tr>
 		  <td><img src="Music/PlasticBeach.png" alt="Plastic Beach Kazoo Edition album cover" style="width:50px;height:50px;"></td>
