--- a/Music/MusicHome.html
+++ b/Music/MusicHome.html
@@ -24,21 +24,22 @@
 	
 	<h2 style="text-align:center;">Music</h2>	
 	
-<p style="text-align:center;">Music is far and away my favourite thing in the world. I love to listen to it, play it, write it, record it, mix it and share it.<br><br>I'm currently on a bit of a new wave/post punk binge, and I've found some very interesting stuff that I'm keen to experiment with in my own writing and playing.</p>
+<p style="text-align:center;">Music is far and away my favourite thing in the world. I love to listen to it, play it, write it, record it, mix it and share it.<br><br>I'm currently listening to some albums I got for Christmas- Kraftwerk, Air, Portishead, Sundara Karma - lots to learn about.</p>
 <p style="text-align:center;">Collected below are musical projects I've been involved with. Some are completely my own, while others are collaborative efforts I've been lucky enough to be a part of. All of them were fun to do, and I hope they hold some interest.</p>
 
 <br>
 
 <div id="grid">
-	<a href="CommonwealthApp.html" class="img" style="background-image: url(CommonwealthApp.png)" title="Commonwealth App song, submitted as coursework for my degree"></a>
+	<a href="../placeholder.html" class="img" style="background-image: url(Splinters.jpg)" title="Splinters OST - My first big composing project: an original score for a five star play"></a>
 	<a href="MelancholyChristmas.html" class="img" style="background-image: url(MelancholyChristmas.jpg)" title="Melancholy Christmas - Mutual Frogs: The first song I produced for other musicians."></a>
+	<a href="CommonwealthApp.html" class="img" style="background-image: url(CommonwealthApp.png)" title="Commonwealth App song, submitted as coursework for my degree"></a>
 	<a href="https://youtube.com/playlist?list=PL776zvniD1BhbpTCZIFJqtB4xzULHGqwq" class="img" style="background-image: url(ObscureCoversVol1.png)" title="Obscure Covers Volume 1: Relatively unknown songs covered in different styles, as an exercise in expanding my stylistic range."></a>
 <a href="MorningChildhood.html" class="img" style="background-image: url(MorningChildhood.png)" title="Morning Childhood: My first original album."></a>
     <a href="PlasticBeach.html" class="img" style="background-image: url(PlasticBeach.png)" title="Plastic Beach - Kazoo Edition: A faithful recreation of most of the amazing Gorillaz album, done using only the sounds of the kazoo."></a>
  </div>
 
 <hr>
-Last updated 2022-06-06
+Last updated 2023-01-05
 </body>
 </html>
 
